@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2023 Hedera Hashgraph, LLC
+ * Copyright (C) 2023-2024 Hedera Hashgraph, LLC
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,11 +16,14 @@
 
 package com.hedera.node.app.spi.records;
 
+import static com.hedera.hapi.node.base.ResponseCodeEnum.INVALID_NODE_ACCOUNT;
+import static com.hedera.hapi.node.base.ResponseCodeEnum.INVALID_PAYER_SIGNATURE;
 import static com.hedera.hapi.node.base.ResponseCodeEnum.UNKNOWN;
 import static com.hedera.node.app.spi.HapiUtils.TIMESTAMP_COMPARATOR;
 import static java.util.Collections.emptyList;
 
 import com.hedera.hapi.node.base.AccountID;
+import com.hedera.hapi.node.base.ResponseCodeEnum;
 import com.hedera.hapi.node.base.Timestamp;
 import com.hedera.hapi.node.base.TransactionID;
 import com.hedera.hapi.node.transaction.TransactionReceipt;
@@ -29,6 +32,8 @@ import com.hedera.node.app.spi.Service;
 import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.Nullable;
 import java.util.ArrayList;
+import java.util.Comparator;
+import java.util.EnumSet;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -45,6 +50,27 @@ import java.util.Set;
  */
 public interface RecordCache {
     /**
+     * For mono-service fidelity, records with these statuses do not prevent valid transactions with
+     * the same id from reaching consensus and being handled.
+     */
+    Set<ResponseCodeEnum> UNCLASSIFIABLE_STATUSES = EnumSet.of(INVALID_NODE_ACCOUNT, INVALID_PAYER_SIGNATURE);
+    /**
+     * And when ordering records for queries, we treat records with unclassifiable statuses as the
+     * lowest "priority"; so that e.g. if a transaction with id {@code X} resolves to {@link ResponseCodeEnum#SUCCESS}
+     * <i>after</i> we previously resolved an {@link ResponseCodeEnum#INVALID_NODE_ACCOUNT} for {@code X},
+     * then {@link com.hedera.hapi.node.base.HederaFunctionality#TRANSACTION_GET_RECEIPT} will return
+     * the success record.
+     */
+    // nested ternary expressions
+    @SuppressWarnings("java:S3358")
+    Comparator<TransactionRecord> RECORD_COMPARATOR = Comparator.<TransactionRecord, ResponseCodeEnum>comparing(
+                    rec -> rec.receiptOrThrow().status(),
+                    (a, b) -> UNCLASSIFIABLE_STATUSES.contains(a) == UNCLASSIFIABLE_STATUSES.contains(b)
+                            ? 0
+                            : (UNCLASSIFIABLE_STATUSES.contains(b) ? -1 : 1))
+            .thenComparing(rec -> rec.consensusTimestampOrElse(Timestamp.DEFAULT), TIMESTAMP_COMPARATOR);
+
+    /**
      * An item stored in the cache.
      *
      * <p>There is a new {@link History} instance created for each original user transaction that comes to consensus.
@@ -56,8 +82,8 @@ public interface RecordCache {
      * Duplicate transactions never have child transactions.
      *
      * @param nodeIds The IDs of every node that submitted a transaction with the txId that came to consensus and was
-     *                handled. This is an unordered set, since deterministic ordering is not required for this in-memory
-     *                data structure
+     * handled. This is an unordered set, since deterministic ordering is not required for this in-memory
+     * data structure
      * @param records Every {@link TransactionRecord} handled for every user transaction that came to consensus
      * @param childRecords The list of child records
      */
@@ -88,7 +114,7 @@ public interface RecordCache {
          */
         @Nullable
         public TransactionRecord userTransactionRecord() {
-            return records.isEmpty() ? null : records.get(0);
+            return records.isEmpty() ? null : sortedRecords().getFirst();
         }
 
         /**
@@ -99,7 +125,9 @@ public interface RecordCache {
          */
         @Nullable
         public TransactionReceipt userTransactionReceipt() {
-            return records.isEmpty() ? PENDING_RECEIPT : records.get(0).receipt();
+            return records.isEmpty()
+                    ? PENDING_RECEIPT
+                    : sortedRecords().getFirst().receipt();
         }
 
         /**
@@ -110,7 +138,7 @@ public interface RecordCache {
          */
         @NonNull
         public List<TransactionRecord> duplicateRecords() {
-            return records.isEmpty() ? emptyList() : records.subList(1, records.size());
+            return records.isEmpty() ? emptyList() : sortedRecords().subList(1, records.size());
         }
 
         /**
@@ -125,15 +153,18 @@ public interface RecordCache {
         /**
          * Returns a list of all records, ordered by consensus timestamp. Some elements of {@link #childRecords} may
          * come before those in {@link #records}, while some may come after some elements in {@link #records}.
+         *
          * @return The list of all records, ordered by consensus timestamp.
          */
         public List<TransactionRecord> orderedRecords() {
             final var ordered = new ArrayList<>(records);
             ordered.addAll(childRecords);
-            ordered.sort((a, b) -> TIMESTAMP_COMPARATOR.compare(
-                    a.consensusTimestampOrElse(Timestamp.DEFAULT), // Comparator doesn't currently handle nulls
-                    b.consensusTimestampOrElse(Timestamp.DEFAULT)));
+            ordered.sort(RECORD_COMPARATOR);
             return ordered;
+        }
+
+        private List<TransactionRecord> sortedRecords() {
+            return records.stream().sorted(RECORD_COMPARATOR).toList();
         }
     }
 
@@ -142,10 +173,10 @@ public interface RecordCache {
      *
      * @param transactionID The transaction ID to look up
      * @return the history, if any, stored in this cache for the given transaction ID. If the history does not exist
-     *         (i.e. it is null), then we have never heard of this transactionID. If the history is not null, but there
-     *         are no records within it, then we have heard of this transactionID (i.e. in pre-handle or ingest), but
-     *         we do not yet have a record for it (i.e. in handle). If there are records, then the first record will
-     *         be the "primary" or user-transaction record, and the others will be the duplicates.
+     * (i.e. it is null), then we have never heard of this transactionID. If the history is not null, but there
+     * are no records within it, then we have heard of this transactionID (i.e. in pre-handle or ingest), but
+     * we do not yet have a record for it (i.e. in handle). If there are records, then the first record will
+     * be the "primary" or user-transaction record, and the others will be the duplicates.
      */
     @Nullable
     History getHistory(@NonNull TransactionID transactionID);
