@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2020-2023 Hedera Hashgraph, LLC
+ * Copyright (C) 2020-2024 Hedera Hashgraph, LLC
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,6 +19,7 @@ package com.hedera.node.app.service.mono.queries.crypto;
 import static com.hedera.node.app.service.mono.utils.EntityNumPair.fromAccountTokenRel;
 import static com.hedera.test.utils.IdUtils.asAccount;
 import static com.hedera.test.utils.IdUtils.asContract;
+import static com.hedera.test.utils.IdUtils.tokenBalanceWith;
 import static com.hederahashgraph.api.proto.java.HederaFunctionality.CryptoGetAccountBalance;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.ACCOUNT_DELETED;
 import static com.hederahashgraph.api.proto.java.ResponseCodeEnum.CONTRACT_DELETED;
@@ -36,6 +37,7 @@ import com.google.protobuf.ByteString;
 import com.hedera.node.app.hapi.utils.ByteStringUtils;
 import com.hedera.node.app.service.mono.context.MutableStateChildren;
 import com.hedera.node.app.service.mono.context.primitives.StateView;
+import com.hedera.node.app.service.mono.context.properties.GlobalDynamicProperties;
 import com.hedera.node.app.service.mono.ledger.accounts.AliasManager;
 import com.hedera.node.app.service.mono.legacy.core.jproto.JEd25519Key;
 import com.hedera.node.app.service.mono.legacy.core.jproto.JKey;
@@ -62,7 +64,7 @@ import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
 import com.hederahashgraph.api.proto.java.ResponseType;
 import com.hederahashgraph.api.proto.java.TokenID;
 import com.swirlds.merkle.map.MerkleMap;
-import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -75,6 +77,9 @@ class GetAccountBalanceAnswerTest {
     private AccountStorageAdapter accounts;
 
     @Mock
+    private GlobalDynamicProperties dynamicProperties;
+
+    @Mock
     private OptionValidator optionValidator;
 
     @Mock
@@ -84,7 +89,7 @@ class GetAccountBalanceAnswerTest {
 
     @BeforeEach
     void setup() {
-        subject = new GetAccountBalanceAnswer(aliasManager, optionValidator);
+        subject = new GetAccountBalanceAnswer(aliasManager, optionValidator, dynamicProperties);
     }
 
     @Test
@@ -231,6 +236,8 @@ class GetAccountBalanceAnswerTest {
         given(aliasManager.lookupIdBy(aliasId.getAlias())).willReturn(wellKnownId);
         accountV.setKey(EntityNum.fromAccountId(asAccount(accountIdLit)));
         given(accounts.get(wellKnownId)).willReturn(accountV);
+        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokenRels);
+        given(dynamicProperties.areTokenBalancesEnabledInQueries()).willReturn(true);
 
         final CryptoGetAccountBalanceQuery op =
                 CryptoGetAccountBalanceQuery.newBuilder().setAccountID(aliasId).build();
@@ -243,7 +250,12 @@ class GetAccountBalanceAnswerTest {
 
         assertTrue(response.getCryptogetAccountBalance().hasHeader(), "Missing response header!");
         assertEquals(
-                Collections.emptyList(), response.getCryptogetAccountBalance().getTokenBalancesList());
+                List.of(
+                        tokenBalanceWith(aToken, aBalance, 1),
+                        tokenBalanceWith(bToken, bBalance, 2),
+                        tokenBalanceWith(cToken, cBalance, 123),
+                        tokenBalanceWith(dToken, dBalance, 123)),
+                response.getCryptogetAccountBalance().getTokenBalancesList());
         assertEquals(OK, status);
         assertEquals(balance, answer);
         assertEquals(
@@ -258,6 +270,8 @@ class GetAccountBalanceAnswerTest {
         final var wellKnownId = EntityNum.fromLong(12345L);
         accountV.setKey(EntityNum.fromAccountId(asAccount(accountIdLit)));
         given(accounts.get(wellKnownId)).willReturn(accountV);
+        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokenRels);
+        given(dynamicProperties.areTokenBalancesEnabledInQueries()).willReturn(true);
 
         // when:
         final Response response = subject.responseGiven(query, wellKnownView(), OK);
@@ -267,9 +281,13 @@ class GetAccountBalanceAnswerTest {
 
         // expect:
         assertTrue(response.getCryptogetAccountBalance().hasHeader(), "Missing response header!");
-        // we don't return token balances data in the query anymore since it is deprecated
         assertEquals(
-                Collections.emptyList(), response.getCryptogetAccountBalance().getTokenBalancesList());
+                List.of(
+                        tokenBalanceWith(aToken, aBalance, 1),
+                        tokenBalanceWith(bToken, bBalance, 2),
+                        tokenBalanceWith(cToken, cBalance, 123),
+                        tokenBalanceWith(dToken, dBalance, 123)),
+                response.getCryptogetAccountBalance().getTokenBalancesList());
         assertEquals(OK, status);
         assertEquals(balance, answer);
         assertEquals(id, response.getCryptogetAccountBalance().getAccountID());
@@ -283,6 +301,8 @@ class GetAccountBalanceAnswerTest {
         accountV.setKey(EntityNum.fromAccountId(asAccount(accountIdLit)));
         final var view = wellKnownView();
         given(accounts.get(EntityNum.fromContractId(id))).willReturn(accountV);
+        given(dynamicProperties.maxTokensRelsPerInfoQuery()).willReturn(maxTokenRels);
+        given(dynamicProperties.areTokenBalancesEnabledInQueries()).willReturn(true);
 
         // when:
         final Response response = subject.responseGiven(query, view, OK);
@@ -293,7 +313,12 @@ class GetAccountBalanceAnswerTest {
         // expect:
         assertTrue(response.getCryptogetAccountBalance().hasHeader(), "Missing response header!");
         assertEquals(
-                Collections.emptyList(), response.getCryptogetAccountBalance().getTokenBalancesList());
+                List.of(
+                        tokenBalanceWith(aToken, aBalance, 1),
+                        tokenBalanceWith(bToken, bBalance, 2),
+                        tokenBalanceWith(cToken, cBalance, 123),
+                        tokenBalanceWith(dToken, dBalance, 123)),
+                response.getCryptogetAccountBalance().getTokenBalancesList());
         assertEquals(OK, status);
         assertEquals(balance, answer);
         assertEquals(
